--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ body {
   line-height: 150px;
 }
 
+.container {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
 #header a{
   color: white;
   text-decoration: none;
